--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Education</h2>
-                    <h3 class="section-subheading text-muted">A timeline of the past decade of my life.</h3>
+                    <h3 class="section-subheading text-muted">A timeline of the past decade of my life.<br> (Click on pictures for more info)</h3>
                 </div>
             </div>
             <div class="row">
