Added a new Photo to Anatomy Section

--- a/index.html
+++ b/index.html
@@ -570,6 +570,7 @@
                             <p class="item-intro text-muted">My time in the old anatomy department</p>
                             <img class="img-responsive img-centered" src="img/portfolioM/Anatomy/Anat.jpg" alt="">
                             <p>I worked in the Old Anatomy Department of Trinity College for 10 weeks over the Summer of 2014. In these weeks I cleaned, organised and catalogued many items which hadn't been moved in decades. I cleaned and organised the Museum building, I catalogued and cleaned over 200 historical sketches found underneath the Lecture Hall Theatre. I was given keys to the department and had to clear out old lecturer's and professor's rooms</p>
+                            <img class="img-responsive img-centered" src="img/portfolioM/Anatomy/AllDaBoys.jpg" alt="">
                             <p>Through my work in the Anatomy Department I learned the value of correctly cataloguing and storing specimens. I had to show respect to the premises and specimens I was dealing with. I learned a lot about the human body during my time working, and thoroughly appreciate it.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Section</button>
                         </div>
