Fixed Spelling Error

--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
                             <h2>Graduation Day</h2>
                             <p class="item-intro text-muted">2nd of December 2015</p>
                             <img class="img-responsive img-centered" src="img/aboutM/grad/Group.jpg" alt="">
-                            <p>I graduated from Trinity College Dublin on the 2nd of December 2015 with a 2.1 Honours Degree in Computer Science, Linguistics and Modern Irish. I receieved the same overall result in each year of my degree, generally receiving firsts in the CS subjects, 2.1s in linguistics and 2.2s in Irish.</p>
+                            <p>I graduated from Trinity College Dublin on the 2nd of December 2015 with a 2.1 Honours Degree in Computer Science, Linguistics and Modern Irish. I received the same overall result in each year of my degree, generally receiving firsts in the CS subjects, 2.1s in linguistics and 2.2s in Irish.</p>
                             <p>I had an amazing day and it was an honour and a privilege to have had such wonderful people studying in the course alongside me.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Section</button>
                         </div>
