--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Corpus Based Scrabble</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                            <p class="item-intro text-muted">Final Year Project 2015</p>
                             <img class="img-responsive img-centered" src="img/portfolioM/Scrabble/collage.jpg" alt="">
                             <p>For my final year project, I created a functioning corpus based scrabble application. An application where the user (or player) could choose to either play Scrabble in English, Irish or any language they wanted so long as they had a corpus text file of that language. The application would take such a corpus, redistribute the values associated with letters and the frequency with which they occur in the game, and use the corpus as the dictionary in the game stored as a Trie data structure. I received a First Class Honours for this project.</p>
                             <img class="img-responsive img-centered" src="img/portfolioM/Scrabble/3.png" alt="">
@@ -442,7 +442,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>Gaelic Verb Morphological Analyser</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                            <p class="item-intro text-muted">Erasmus Dissertation 2014</p>
                             <img class="img-responsive img-centered" src="img/portfolioM/Gaelic/woof.jpg" alt="">
                             <p>For my Erasmus Dissertation I designed and implemented a morphological transducer for the verbs in Scottish Gaelic using the Xerox Finite State Tool, XFST. I used several FSAs, or finite state automatons to model the morphotactic rules, such as the one below: </p>
                              <img class="img-responsive img-centered" src="img/portfolioM/Gaelic/line.png" alt="">
