Added Link to GitHub Battle

--- a/index.html
+++ b/index.html
@@ -420,6 +420,7 @@
                             <p>For my final year project, I created a functioning corpus based scrabble application. An application where the user (or player) could choose to either play Scrabble in English, Irish or any language they wanted so long as they had a corpus text file of that language. The application would take such a corpus, redistribute the values associated with letters and the frequency with which they occur in the game, and use the corpus as the dictionary in the game stored as a Trie data structure. I received a First Class Honours for this project.</p>
                             <img class="img-responsive img-centered" src="img/portfolioM/Scrabble/3.png" alt="">
                             <p>The code as well as the report on the project can be seen in this shared <a href="https://drive.google.com/folderview?id=0B_V82jQoy_a-flVVWWREdGxscmk1b0tFT2dDck5kWFFGTzRSVVpXZG43N0UwYXA2YW5GZ00&usp=drive_web" target="_blank">Google Drive folder</a>.</p>
+                            <p>Quick testing out of the <a href="gitubBattle.html" title="Battle" target="_blank">GitHub Battle</a>.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
