Quick test of Api.ai

--- a/index.html
+++ b/index.html
@@ -421,6 +421,7 @@
                             <img class="img-responsive img-centered" src="img/portfolioM/Scrabble/3.png" alt="">
                             <p>The code as well as the report on the project can be seen in this shared <a href="https://drive.google.com/folderview?id=0B_V82jQoy_a-flVVWWREdGxscmk1b0tFT2dDck5kWFFGTzRSVVpXZG43N0UwYXA2YW5GZ00&usp=drive_web" target="_blank">Google Drive folder</a>.</p>
                             <p>Quick testing out of the <a href="githubBattle.html" title="Battle" target="_blank">GitHub Battle</a>.</p>
+                            <iframe width="350" height="430" src="https://console.api.ai/api-client/demo/embedded/webibot"></iframe>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
