--- a/index.html
+++ b/index.html
@@ -423,6 +423,7 @@
                             <p>Quick testing out of the <a href="githubBattle.html" title="Battle" target="_blank">GitHub Battle</a>.</p>
                             <p>Yo yo chatbot in the house</p>
                             <iframe width="350" height="430" src="https://console.api.ai/api-client/demo/embedded/webibot"></iframe>
+                            <p>That chatbot was crazy</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
