--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                             <p>That chatbot was crazy</p>
                             <a href="https://slack.com/oauth/authorize?scope=bot&client_id=40410206229.158910706342"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
                             <p>Fingers Crossed that PreBot link works</p>
-                            <a href="https://slack.com/oauth/authorize?scope=incoming-webhook,bot&client_id=40410206229.158910706342"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
+                            <a href="https://slack.com/oauth/authorize?scope=bot&client_id=40410206229.159235906871"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
                             <p>Now that second bot there is for WebiBot</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
