added cv chatbot

--- a/index.html
+++ b/index.html
@@ -420,14 +420,14 @@
                             <p>For my final year project, I created a functioning corpus based scrabble application. An application where the user (or player) could choose to either play Scrabble in English, Irish or any language they wanted so long as they had a corpus text file of that language. The application would take such a corpus, redistribute the values associated with letters and the frequency with which they occur in the game, and use the corpus as the dictionary in the game stored as a Trie data structure. I received a First Class Honours for this project.</p>
                             <img class="img-responsive img-centered" src="img/portfolioM/Scrabble/3.png" alt="">
                             <p>The code as well as the report on the project can be seen in this shared <a href="https://drive.google.com/folderview?id=0B_V82jQoy_a-flVVWWREdGxscmk1b0tFT2dDck5kWFFGTzRSVVpXZG43N0UwYXA2YW5GZ00&usp=drive_web" target="_blank">Google Drive folder</a>.</p>
-                            <p>Quick testing out of the <a href="githubBattle.html" title="Battle" target="_blank">GitHub Battle</a>.</p>
-                            <p>Yo yo chatbot in the house</p>
-                            <iframe width="350" height="430" src="https://console.api.ai/api-client/demo/embedded/webibot"></iframe>
+                            <!--    <p>Quick testing out of the <a href="githubBattle.html" title="Battle" target="_blank">GitHub Battle</a>.</p> -->
+                            <p>Below is a test of my CV chatbot</p>
+                            <iframe
+                                width="350"
+                                height="430"
+                                src="https://console.api.ai/api-client/demo/embedded/cv">
+                            </iframe>
                             <p>That chatbot was crazy</p>
-                            <a href="https://slack.com/oauth/authorize?scope=bot&client_id=40410206229.158910706342"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
-                            <p>Fingers Crossed that PreBot link works</p>
-                            <a href="https://slack.com/oauth/authorize?scope=bot&client_id=40410206229.159235906871"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
-                            <p>Now that second bot there is for WebiBot</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
