--- a/Adam/about.html
+++ b/Adam/about.html
@@ -109,7 +109,7 @@
                      <p> A multiple prizewinner in the major Irish festivals and national competitions, Adam has won the Sligo Feis Ceoil Senior Instrumental Bursary, Alan Gillespie Ulster Bank Award at the Clandeboye Music Festival and 2 nd Prize in the Irish Freemasons Young Musician of the Year competition. He is the recipient of funding from the Dun Laoghaire-Rathdown County Council, and the Music Network Music Capital Scheme funded by the Arts Council and the Department of Arts, Heritage and the Gaeltacht. In 2017, Adam is the inaugural Artist-in- Residence for the Dublin International Piano Competition’s Schools Project.</p> <br/><p> As a soloist, Adam has taken masterclasses with Edmund Battersby, Evelyne Brancart, Jeremy Denk, Barry Douglas, and Jeffrey Swann. He works extensively as a collaborative pianist and has acted as accompanist in the masterclasses of Patricia Bardon, Ailish Tynan and Maxim Vengerov. He shall be continuing his studies on the Master of Music in Performance programme in September 2017 as a scholar of the Royal College of Music, London.</p>
                 </div>
                                 <div class="col-md-6">
-                    <img class="img-responsive img-border-right" src="img/adamP.jpg" alt="">
+                    <img class="img-responsive img-border-right" src="img/AdamP.jpg" alt="">
                 </div>
                 <div class="clearfix"></div>
             </div>
