--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </div>
                 <div class="col-md-3">
                    <div class="team-member">
-                        <a href="img/header/CV.pdf" target="_blank"><img src="img/header/CV3.png" class="img-responsive img-circle" title="CV"></a>
+                        <a href="img/header/DavidPowerResume.pdf" target="_blank"><img src="img/header/CV3.png" class="img-responsive img-circle" title="CV"></a>
                     </div>
                     <h4 class="service-heading">Curriculum Vitae</h4>
                 </div>
