--- a/Adam/index.html
+++ b/Adam/index.html
@@ -4,6 +4,7 @@
 <head>
 
     <meta charset="utf-8">
+    <meta http-equiv="Refresh" content="5; url=https://www.quackit.com/html/tags/">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
