--- a/Karl/index.html
+++ b/Karl/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="Refresh" content="0; url=https://www.youtube.com/watch?v=H3usWBDbSMc&feature=youtu.be">
+    <meta http-equiv="Refresh" content="0; url=https://www.youtube.com/watch?v=H3usWBDbSMc">
     <title>title</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
