Updating Peter's text

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -82,7 +82,7 @@
               </figure>
               <span class="probootstrap-caption">The Groom</span>
               <h2 class="text-center">Peter Stewart</h2>
-              <p>Born and Bred in Belfast, Educated in Glasgow, Peter's short fair hair, his sweeping silver tongue and his broad shoulders, make him look like some wise king of ancient legend. In his aged face under great snowy brows his dark eyes are set like coals that could leap suddenly into fire.</p>
+              <p>Peter is Irish, bookish, and tall. His hobbies include reading, aikido, and avoiding shops. He would like to point out that Helena is good-looking in a rather obvious way whereas his charms are more nuanced. He would like to thank all his friends and family for their advice on wedding traditions, without which the wedding would have been planned in half the time. </p>
     <p>"I love your feet because they have wandered over the earth and through the wind and water until they brought you to me." —Pablo Neruda, Your Feet</p>
             </div>
 
@@ -94,7 +94,7 @@
               </figure>
               <span class="probootstrap-caption">The Bride</span>
               <h2 class="text-center">Helena Kolberg</h2>
-              <p>Far far away, behind the Willowed mountains,  far from the countries Vokalia and Consonantia, there lives an Estonian Clan. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. Helena reigns as Chieftess amongst them.</p>
+              <p>Hailing from Estonia, Helena moved to Scotland for her last year of high school. Her hobbies include reading, surpassing Peter in aikido and dragging him into shops. She spends the rest of her time doing normal Estonian things: running barefoot through forests, singing duets with birds, nursing deer back to health, etc. She is aware of your vegan jokes but can’t hear them from way up here on the moral high ground. </p>
     <p>"I think I'd miss you even if we'd never met." —Nick, character from The Wedding Date</p>
             </div>
 
@@ -112,13 +112,12 @@
           <div class="col-md-6 probootstrap-animate">  
             <p><img src="img2/img_2.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive img-rounded"></p>
             <h3>Wedding Ceremony</h3>
-            <p>The Ceremony shall take place in a nearby chapel, famous for overlooking the Atlantic Sea. Here Wind Swept Dunes shall provide a scenic escape from the Ordinary.</p>
-    
+            <p>The ceremony will be held 13:00hrs on Wednesday 31st July at St Mary’s chapel in Lagg, Inishowen – near Malin Head, one of the northernmost points of Ireland.</p>
           </div>
           <div class="col-md-6 probootstrap-animate">
             <p><img src="img2/img_1.jpg" alt="Free Bootstrap Template by uicookies.com" href="https://www.ballyliffinlodge.com/" class="img-responsive img-rounded"></p>
             <h3>Wedding Party</h3>
-            <p>The Wedding Party shall take place at the Ballyliffin Lodge &amp; Spa Hotel which is situated in the picturesque village of Ballyliffin on the Inishowen peninsula, overlooking the sandy beaches of Pollan Bay on the famous Wild Atlantic Way. </p>
+            <p>The wedding reception will be held after the ceremony in the beautiful Ballyliffin Lodge, in the village of Ballyliffin, Donegal. Guests  will be welcomed for drink reception from 14:30hrs, and are invited to mingle until Peter manages to escape the photographer, which might take a while because Helena knows what he’s like. Then, dinner! </p>
           </div>
         </div>
       </div>
