initial adding of photos

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -135,20 +135,20 @@
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <div class="row probootstrap-gutter30">
               <div class="col-md-6 probootstrap-animate">
-                <a class="probootstrap-image image-popup" href="img/img_3.jpg" style="background-image: url(img/img_3.jpg)">
-                  <div class="probootstrap-image-for-popup"><img src="img/img_3.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                <a class="probootstrap-image image-popup" href="img2/10577085_4410401994910_351678998520408404_n.jpg" style="background-image: url(img2/10577085_4410401994910_351678998520408404_n.jpg)">
+                  <div class="probootstrap-image-for-popup"><img src="img2/10577085_4410401994910_351678998520408404_n.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
                 </a>
               </div>
               <div class="col-md-6 probootstrap-animate">
-                <a class="probootstrap-image image-popup" href="img/img_2.jpg" style="background-image: url(img/img_2.jpg)">
-                  <div class="probootstrap-image-for-popup"><img src="img/img_2.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                <a class="probootstrap-image image-popup" href="img2/10624826_779892475365147_8525139435968731740_n.jpg" style="background-image: url(img2/10624826_779892475365147_8525139435968731740_n.jpg)">
+                  <div class="probootstrap-image-for-popup"><img src="img2/10624826_779892475365147_8525139435968731740_n.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
                 </a>
               </div>
             </div>
             <div class="row probootstrap-gutter30">
               <div class="col-md-12 probootstrap-animate">
-                <a class="probootstrap-image image-popup" href="img/img_1.jpg" style="background-image: url(img/img_1.jpg)">
-                  <div class="probootstrap-image-for-popup"><img src="img/img_1.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                <a class="probootstrap-image image-popup" href="img2/10888413_4909965763692_4106670649988988393_n.jpg" style="background-image: url(img2/10888413_4909965763692_4106670649988988393_n.jpg)">
+                  <div class="probootstrap-image-for-popup"><img src="img2/10888413_4909965763692_4106670649988988393_n.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
                 </a>
               </div>
             </div>
@@ -158,20 +158,20 @@
               <div class="col-md-6">
                 <div class="row probootstrap-gutter30">
                   <div class="col-md-12 probootstrap-animate">
-                    <a class="probootstrap-image image-popup" href="img/img_4.jpg" style="background-image: url(img/img_4.jpg)">
-                      <div class="probootstrap-image-for-popup"><img src="img/img_4.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                    <a class="probootstrap-image image-popup" href="img2/11391371_10200524348107919_804848276399982587_n.jpg" style="background-image: url(img2/11391371_10200524348107919_804848276399982587_n.jpg)">
+                      <div class="probootstrap-image-for-popup"><img src="img2/11391371_10200524348107919_804848276399982587_n.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
                     </a>
                   </div>
                   <div class="col-md-12 probootstrap-animate">
-                    <a class="probootstrap-image image-popup" href="img/img_5.jpg" style="background-image: url(img/img_5.jpg)">
-                      <div class="probootstrap-image-for-popup"><img src="img/img_5.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                    <a class="probootstrap-image image-popup" href="img2/1609726_779894392031622_1855975169193191240_n.jpg" style="background-image: url(img2/1609726_779894392031622_1855975169193191240_n.jpg)">
+                      <div class="probootstrap-image-for-popup"><img src="img2/1609726_779894392031622_1855975169193191240_n.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
                     </a>
                   </div>
                 </div>
               </div>
               <div class="col-md-6 probootstrap-animate">
-                <a class="probootstrap-image  height-2x image-popup" href="img/img_6.jpg" style="background-image: url(img/img_6.jpg)">
-                  <div class="probootstrap-image-for-popup"><img src="img/img_6.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                <a class="probootstrap-image  height-2x image-popup" href="img2/37398790_10204602100569182_2543211076976115712_n.jpg" style="background-image: url(img2/37398790_10204602100569182_2543211076976115712_n.jpg)">
+                  <div class="probootstrap-image-for-popup"><img src="img2/37398790_10204602100569182_2543211076976115712_n.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
                 </a>
               </div>
             </div>
