--- a/wedding/index.html
+++ b/wedding/index.html
@@ -185,8 +185,8 @@
               <div class="col-md-6">
                 <div class="row probootstrap-gutter30">
                   <div class="col-md-12 probootstrap-animate">
-                    <a class="probootstrap-image image-popup" href="img/img_1.jpg" style="background-image: url(img/img_1.jpg)">
-                      <div class="probootstrap-image-for-popup"><img src="img/img_1.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                    <a class="probootstrap-image image-popup" href="img2/57417848_10205556519549060_1371657188195434496_n.jpg" style="background-image: url(img2/57417848_10205556519549060_1371657188195434496_n.jpg)">
+                      <div class="probootstrap-image-for-popup"><img src="img2/57417848_10205556519549060_1371657188195434496_n.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
                     </a>
                   </div>
                   <div class="col-md-12 probootstrap-animate">
