--- a/wedding/index.html
+++ b/wedding/index.html
@@ -218,8 +218,8 @@
             </div>
             <div class="row probootstrap-gutter30">
               <div class="col-md-12 probootstrap-animate">
-                <a class="probootstrap-image image-popup" href="img/img_6.jpg" style="background-image: url(img/img_6.jpg)">
-                  <div class="probootstrap-image-for-popup"><img src="img/img_6.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                <a class="probootstrap-image image-popup" href="img2/57417848_10205556519549060_1371657188195434496_n.jpg" style="background-image: url(img/img2/57417848_10205556519549060_1371657188195434496_n.jpg)">
+                  <div class="probootstrap-image-for-popup"><img src="img2/57417848_10205556519549060_1371657188195434496_n.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
                 </a>
               </div>
             </div>
