--- a/wedding/index.html
+++ b/wedding/index.html
@@ -185,13 +185,13 @@
               <div class="col-md-6">
                 <div class="row probootstrap-gutter30">
                   <div class="col-md-12 probootstrap-animate">
-                    <a class="probootstrap-image image-popup" href="img2/57417848_10205556519549060_1371657188195434496_n.jpg" style="background-image: url(img2/57417848_10205556519549060_1371657188195434496_n.jpg)">
-                      <div class="probootstrap-image-for-popup"><img src="img2/57417848_10205556519549060_1371657188195434496_n.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                    <a class="probootstrap-image image-popup" href="img2/17190470_1350605248293864_1046275243866080039_n.jpg" style="background-image: url(img2/17190470_1350605248293864_1046275243866080039_n.jpg)">
+                      <div class="probootstrap-image-for-popup"><img src="img2/17190470_1350605248293864_1046275243866080039_n.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
                     </a>
                   </div>
                   <div class="col-md-12 probootstrap-animate">
-                    <a class="probootstrap-image image-popup" href="img/img_2.jpg" style="background-image: url(img/img_2.jpg)">
-                      <div class="probootstrap-image-for-popup"><img src="img/img_2.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                    <a class="probootstrap-image image-popup" href="img2/10624878_779892352031826_8276739156772441762_n.jpg" style="background-image: url(img2/10624878_779892352031826_8276739156772441762_n.jpg)">
+                      <div class="probootstrap-image-for-popup"><img src="img2/10624878_779892352031826_8276739156772441762_n.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
                     </a>
                   </div>
                 </div>
@@ -206,13 +206,13 @@
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <div class="row probootstrap-gutter30">
               <div class="col-md-6 probootstrap-animate">
-                <a class="probootstrap-image image-popup" href="img/img_4.jpg" style="background-image: url(img/img_4.jpg)">
-                  <div class="probootstrap-image-for-popup"><img src="img/img_4.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                <a class="probootstrap-image image-popup" href="img2/hero_bg_2.jpg" style="background-image: url(img2/hero_bg_2.jpg)">
+                  <div class="probootstrap-image-for-popup"><img src="img2/hero_bg_2.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
                 </a>
               </div>
               <div class="col-md-6 probootstrap-animate">
-                <a class="probootstrap-image image-popup" href="img/img_5.jpg" style="background-image: url(img/img_5.jpg)">
-                  <div class="probootstrap-image-for-popup"><img src="img/img_5.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                <a class="probootstrap-image image-popup" href="img2/hero_bg_3.jpg" style="background-image: url(img2/hero_bg_3.jpg)">
+                  <div class="probootstrap-image-for-popup"><img src="img2/hero_bg_3.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
                 </a>
               </div>
             </div>
