--- a/wedding/index.html
+++ b/wedding/index.html
@@ -197,8 +197,8 @@
                 </div>
               </div>
               <div class="col-md-6 probootstrap-animate">
-                <a class="probootstrap-image  height-2x image-popup" href="img/img_3.jpg" style="background-image: url(img/img_3.jpg)">
-                  <div class="probootstrap-image-for-popup"><img src="img/img_3.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                <a class="probootstrap-image  height-2x image-popup" href="img2/hero_bg_2.jpg" style="background-image: url(img2/hero_bg_2.jpg)">
+                  <div class="probootstrap-image-for-popup"><img src="img2/hero_bg_2.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
                 </a>
               </div>
             </div>
@@ -206,8 +206,8 @@
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <div class="row probootstrap-gutter30">
               <div class="col-md-6 probootstrap-animate">
-                <a class="probootstrap-image image-popup" href="img2/hero_bg_2.jpg" style="background-image: url(img2/hero_bg_2.jpg)">
-                  <div class="probootstrap-image-for-popup"><img src="img2/hero_bg_2.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                <a class="probootstrap-image image-popup" href="img2/painted-heart--symbol-of-love-michal-boubin.jpg" style="background-image: url(img2/painted-heart--symbol-of-love-michal-boubin.jpg)">
+                  <div class="probootstrap-image-for-popup"><img src="img2/painted-heart--symbol-of-love-michal-boubin.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
                 </a>
               </div>
               <div class="col-md-6 probootstrap-animate">
