--- a/wedding/index.html
+++ b/wedding/index.html
@@ -233,8 +233,8 @@
       <div class="container">
         <div class="row mb40">
           <div class="col-md-12 text-center">
-            <h2 class="mt0 mb10 probootstrap-animate">Will you attend?</h2>
-            <p>Please sign your RSVP</p>
+            <h2 class="mt0 mb10 probootstrap-animate">Got some advice or song suggestions?</h2>
+            <p>Please let us know!</p>
           </div>
         </div>
         <div class="row">
@@ -250,11 +250,6 @@
                   <input type="text" class="form-control" id="email">
                 </div>
                 <div class="form-group">
-                  <p>Will you attend?</p>
-                  <label for="yes"><input type="checkbox" id="yes"> Yes, I will be there</label> <br>
-                  <label for="no"><input type="checkbox" id="no"> Sorry, I can't come</label> <br>
-                </div>
-                <div class="form-group">
                   <label for="note">Note</label>
                   <textarea name="" id="note" cols="20" rows="5" class="form-control"></textarea>
                 </div>
@@ -263,25 +258,6 @@
                 </div>
               </form>
             </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="probootstrap-section probootstrap-section-colored-darker">
-      <div class="container text-center">
-        <div class="row">
-          <div class="col-md-12 probootstrap-animate"><h2 class="mt0">Register</h2></div>
-        </div>
-        <div class="row">
-          <div class="col-md-4 col-sm-4 col-xs-12 probootstrap-animate">
-            <a href="#" class="btn-register"><img src="img/bbab.png" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></a>
-          </div>
-          <div class="col-md-4 col-sm-4 col-xs-12 probootstrap-animate">
-            <a href="#" class="btn-register"><img src="img/cnb.png" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></a>
-          </div>
-          <div class="col-md-4 col-sm-4 col-xs-12 probootstrap-animate">
-            <a href="#" class="btn-register"><img src="img/amazon.png" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></a>
           </div>
         </div>
       </div>
