--- a/wedding/index.html
+++ b/wedding/index.html
@@ -38,7 +38,7 @@
             <li><a href="#" data-nav-section="groom-bride">Groom &amp; Bride</a></li>
             <li><a href="#" data-nav-section="when-where">When &amp; Where</a></li>
             <li><a href="#" data-nav-section="gallery">Gallery</a></li>
-            <li><a href="#" data-nav-section="rsvp">RSVP</a></li>
+            <li><a href="#" data-nav-section="rsvp">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -254,7 +254,7 @@
                   <textarea name="" id="note" cols="20" rows="5" class="form-control"></textarea>
                 </div>
                 <div class="form-group">
-                  <input type="submit" class="btn btn-primary btn-lg" value="Send RSVP">
+                  <input type="submit" class="btn btn-primary btn-lg" value="Send Message">
                 </div>
               </form>
             </div>
