--- a/Adam/media.html
+++ b/Adam/media.html
@@ -89,19 +89,51 @@
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <h2>My Inspirational Speech
+                    <h2>'Svegliatevi nel core' from Giulio Cesare (Handel), with Chloë Allison
                         <br>
-                        <small>October 13, 2016</small>
+                        <small>October 2, 2019</small>
                     </h2>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/stRINgcyLQU" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/_frrX961-rk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <h2>My Go at Singing
+                    <h2>'Seguidilla' from Carmen (Bizet), with Chloë Allison
                         <br>
-                        <small>November 25, 2014</small>
+                        <small>October 2, 2019</small>
                     </h2>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ksE8dRRmRBQ" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/H6ikaEvdEqc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <hr>
+                </div>
+                <div class="col-lg-12 text-center">
+                    <h2>'Give him this orchid' from The Rape of Lucretia (Britten), with Chloë Allison
+                        <br>
+                        <small>October 2, 2019</small>
+                    </h2>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/EKALHqeqMmA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <hr>
+                </div>
+                <div class="col-lg-12 text-center">
+                    <h2>'King David' (Howells), with Chloë Allison
+                        <br>
+                        <small>August 30, 2019</small>
+                    </h2>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/X5OD2An3zeU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <hr>
+                </div>
+                <div class="col-lg-12 text-center">
+                    <h2>'Green' (Fauré), with Chloë Allison
+                        <br>
+                        <small>August 30, 2019</small>
+                    </h2>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/DmvPIDZyY1s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <hr>
+                </div>
+                <div class="col-lg-12 text-center">
+                    <h2>'Von Ewiger Liebe' (Brahms), with Chloë Allison
+                        <br>
+                        <small>August 30, 2019</small>
+                    </h2>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ILBuuOmpoXU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <hr>
                 </div>
                 <div class="col-lg-12">
@@ -112,12 +144,43 @@
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <h2>Woke Up like dis
+                    <h2>Chopin - Polonaise - Fantaisie Op.61
                         <br>
-                        <small>November 17, 2016</small>
+                        <small>July 20, 2015</small>
                     </h2>
-                    <iframe width="100%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/311653887&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-                    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/311653887&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+                    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/215523793&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                    <hr>
+                </div>
+                <div class="col-lg-12 text-center">
+                    <h2>Rachmaninov - Prelude In B Minor Op.32 No.10
+                        <br>
+                        <small>July 20, 2015</small>
+                    </h2>
+                    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/215522826&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                    <hr>
+                </div>
+                <div class="col-lg-12 text-center">
+                    <h2>Bach - Toccata In G Major BWV916
+                        <br>
+                        <small>July 20, 2015</small>
+                    </h2>
+                    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/215520778&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                    <hr>
+                </div>
+                <div class="col-lg-12 text-center">
+                    <h2>Liszt - Ballade No.2 In B Minor
+                        <br>
+                        <small>July 20, 2015</small>
+                    </h2>
+                    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/215517171&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                    <hr>
+                </div>
+                <div class="col-lg-12 text-center">
+                    <h2>Ravel - Jeux d'eau
+                        <br>
+                        <small>July 20, 2015</small>
+                    </h2>
+                    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/215514735&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                     <hr>
                 </div>
             </div>
@@ -130,7 +193,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Adam McDonagh 2017</p>
+                    <p>Copyright &copy; Adam McDonagh 2019</p>
                 </div>
             </div>
         </div>
