Adam Classical Pianist fix

--- a/Adam/index.html
+++ b/Adam/index.html
@@ -118,7 +118,7 @@
                     <hr class="tagline-divider">
                     <h2>
                         <small>
-                            <strong>Classical Penis</strong>
+                            <strong>Classical Pianist</strong>
                         </small>
                     </h2>
                 </div>
