Adding Whatsapp Test

--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@
 
     <!-- Contact Section -->
     <section id="contact">
+        <div class="elfsight-app-c812805a-9055-42c6-b35b-487d517a2b5a"></div>
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -737,6 +738,8 @@
             </div>
         </div>
     </div>
+
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
